--- a/app/src/main/webapp/static/css/styles.css
+++ b/app/src/main/webapp/static/css/styles.css
@@ -1,3 +1,4 @@
+
 html {
     box-sizing: border-box;
     min-height: 100vh;
@@ -16,7 +17,7 @@ body {
 .container {
     max-width: 1620px;
     padding: 0 15px;
-    font-family:  Arial, sans-serif;
+    font-family: Arial, sans-serif;
     font-size: 32px;
     font-style: normal;
     line-height: normal;
@@ -55,12 +56,6 @@ body {
     display: flex;
     flex-direction: column;
     gap: 30px 0;
-}
-
-.X-input, .Y-input, .R-input {
-    display: flex;
-    align-items: center;
-    gap: 0 30px;
 }
 
 .form-checkbox {
@@ -112,7 +107,7 @@ body {
 }
 
 .form-input::placeholder, .form-input, .form-submit {
-    font-family:  Arial, sans-serif;
+    font-family: Arial, sans-serif;
     font-size: 24px;
     font-weight: 300;
 }
@@ -136,11 +131,6 @@ body {
     border-color: rgba(155, 0, 255, 0.4);
 }
 
-.graph {
-    display: flex;
-    align-items: center;
-    font-size: 24px;
-}
 
 .graph__axis, .graph__arrow, .graph__serif {
     stroke: #6A4CFF;
@@ -151,20 +141,12 @@ body {
     fill: none;
 }
 
-.graph__figure {
-    fill: #C3B0FF;
-    fill-opacity: 0.2;
-    stroke: #9B7BFF;
-    stroke-width: 2px;
-}
-
 .graph__point {
     fill: #A084FF;
     fill-opacity: 0.2;
     stroke: #6A4CFF;
     stroke-width: 2px;
 }
-
 
 .archive {
     width: 600px;
@@ -174,7 +156,7 @@ body {
 
 .archive__heading {
     margin: 0 0 10px 0;
-    font-family:  Arial, sans-serif;
+    font-family: Arial, sans-serif;
     font-size: 32px;
     font-style: normal;
 }
@@ -189,6 +171,7 @@ body {
     width: 100%;
     border-collapse: collapse;
 }
+
 .table-archive__head th {
     position: sticky;
     top: 0;
@@ -203,4 +186,27 @@ body {
     padding: 8px;
     border-bottom: 1px solid #eee;
 
+}
+
+ #student-name {
+     font-weight: bold;
+     color: #ffddff;
+     font-size: 36px;
+ }
+.header__inner {
+    font-family: cursive;
+    color: #fafafa;
+    font-size: 32px;
+    width: 100%;
+    margin: 20px 0;
+}
+
+.header__inner td {
+    padding: 5px 10px;
+}
+
+td[class="option"] {
+    color: #ff6600;
+    font-style: italic;
+    text-align: center;
 }
